criação de rotas patch e delete
