# src/routes/estabelecimentosRoutes.js
@@ -3,10 +3,12 @@ const express = require("express");
 const router = express.Router();
 
 
-router.get("/", controller.getAll);
-router.get("/", controller.findEstabelecimentoByBairro)
+router.get("/todos", controller.getAll);
+router.get("/", controller.findEstabelecimentoByBairro);
+router.get("/", controller.findEstabelecimentoByNome);
+router.get("/", controller.findEstabelecimentoByAcessivel);
 router.post("/", controller.postEstabelecimento);
-//router.delete("/", controller.deleteEstabalecimento)
-//router.patch("/", controller.updateEstabalecimento )
+router.delete("/:id", controller.deleteEstabalecimento)
+router.patch("/:id", controller.updateEstabalecimento )
 
 module.exports = router;
